@@ -28,6 +28,10 @@ Rcgmin <- function(par, fn, gr = NULL, lower = NULL,
     # eps=1.0e-7 (default) for use in computing numerical
     #   gradient approximations.
     # dowarn=TRUE by default. Set FALSE to suppress warnings.
+    # checkgrad = TRUE by default. Check analytic gradient 
+    #             against numDeriv results.
+    # checkbounds = TRUE by default. Check parameters and bounds
+    #             for addmissible bounds and feasible start.
     #
     # Output:
     #    A list with components:
@@ -87,14 +91,55 @@ Rcgmin <- function(par, fn, gr = NULL, lower = NULL,
     if (control$trace > 1) 
         cat("Bounds: nolower = ", nolower, "  noupper = ", noupper, 
             " bounds = ", bounds, "\n")
-    grNULL <- is.null(gr)
+    if (is.null(gr)) {
+       gr <- "grfwd" # use forward gradient approximation if no gradient code provided
+       if (control$trace > 0) cat("WARNING: forward gradient approximation being used\n")
+    } else {
+       if (is.character(gr)) { # assume numerical gradient
+           if (control$trace > 0) cat("WARNING: using gradient approximation ",gr,"\n")
+
+       } else { # analytic gradient, so check if requested
+           if (is.null(control$checkgrad)) control$checkgrad <- TRUE
+           if (control$checkgrad) { # check gradient
+              testgrad<-grchk(par, fn, gr, trace=control$trace, ...)
+              if (! testgrad) warning("Gradient code for Rvmmin may be faulty - check it!")
+           }
+       } # end else
+    }
+    control$checkgrad<-NULL # to avoid problems in subsidiary routines
     if (is.null(control$dowarn)) control$dowarn<-TRUE
     #############################################
     if (bounds) {
+       if (is.null(control$checkbounds)) { control$checkbounds <- TRUE }
+       ### Check bounds feasible
+       if (control$checkbounds) {
+          btest <- bmchk(par, lower = lower, upper = upper, bdmsk = bdmsk, 
+             trace = control$trace)
+          if (!btest$admissible) 
+             stop("Inadmissible bounds: one or more lower>upper")
+          if (btest$parchanged) {
+             if (is.null(control$keepinputpar) || ! control$keepinputpar) { 
+                 warning("Parameter out of bounds has been moved to nearest bound")
+                 control$keepinputpar<-NULL # avoid problems in subsidiary routines
+             } else stop("Parameter out of bounds")
+          }
+       }
+       nolower <- btest$nolower
+       noupper <- btest$noupper
+       bounds <- btest$bounds
+       bdmsk <- btest$bdmsk  # change bdmsk to values set in bmchk
+       if (control$trace > 3) {
+          cat("Adjusted bdmsk vector:")
+          print(bdmsk)
+       }
+       lower <- btest$lower
+       upper <- btest$upper
+       control$checkbounds<-NULL # to avoid problems in subsidiary routines
+       ############## end bounds check #############
        ans<-Rcgminb(par, fn, gr, lower = lower, 
           upper = upper, bdmsk = bdmsk, control = control, ...)
     } else {
        ans<-Rcgminu(par, fn, gr, control = control, ...)
     }
-    return(ans) # ?? is this needed
+#    return(ans) # ?? is this needed
 }  ## end of Rcgmin
